@@ -291,7 +291,7 @@ name|mockUserResult
 argument_list|)
 expr_stmt|;
 name|Attribute
-name|mockUidAttr
+name|mockUidNumberAttr
 init|=
 name|mock
 argument_list|(
@@ -301,7 +301,17 @@ name|class
 argument_list|)
 decl_stmt|;
 name|Attribute
-name|mockGidAttr
+name|mockGidNumberAttr
+init|=
+name|mock
+argument_list|(
+name|Attribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Attribute
+name|mockUidAttr
 init|=
 name|mock
 argument_list|(
@@ -330,12 +340,25 @@ argument_list|)
 operator|.
 name|thenReturn
 argument_list|(
+literal|"some_user"
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|mockUidNumberAttr
+operator|.
+name|get
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
 literal|"700"
 argument_list|)
 expr_stmt|;
 name|when
 argument_list|(
-name|mockGidAttr
+name|mockGidNumberAttr
 operator|.
 name|get
 argument_list|()
@@ -354,7 +377,7 @@ name|get
 argument_list|(
 name|eq
 argument_list|(
-literal|"uidNumber"
+literal|"uid"
 argument_list|)
 argument_list|)
 argument_list|)
@@ -372,6 +395,24 @@ name|get
 argument_list|(
 name|eq
 argument_list|(
+literal|"uidNumber"
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|mockUidNumberAttr
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|mockAttrs
+operator|.
+name|get
+argument_list|(
+name|eq
+argument_list|(
 literal|"gidNumber"
 argument_list|)
 argument_list|)
@@ -379,7 +420,7 @@ argument_list|)
 operator|.
 name|thenReturn
 argument_list|(
-name|mockGidAttr
+name|mockGidNumberAttr
 argument_list|)
 expr_stmt|;
 name|when
@@ -538,6 +579,28 @@ name|set
 argument_list|(
 name|LdapGroupsMapping
 operator|.
+name|POSIX_UID_ATTR_KEY
+argument_list|,
+literal|"uidNumber"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|LdapGroupsMapping
+operator|.
+name|POSIX_GID_ATTR_KEY
+argument_list|,
+literal|"gidNumber"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|LdapGroupsMapping
+operator|.
 name|GROUP_NAME_ATTR_KEY
 argument_list|,
 literal|"cn"
@@ -565,6 +628,29 @@ argument_list|(
 literal|"some_user"
 argument_list|)
 decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|expectedGroups
+argument_list|,
+name|groups
+argument_list|)
+expr_stmt|;
+name|mappingSpy
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|set
+argument_list|(
+name|LdapGroupsMapping
+operator|.
+name|POSIX_UID_ATTR_KEY
+argument_list|,
+literal|"uid"
+argument_list|)
+expr_stmt|;
 name|Assert
 operator|.
 name|assertEquals
